# qemb

./: .gitignore  Cargo.toml  README.md  SPEC.md  TASKS.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  flake.nix
crates/qemb-cli/: Cargo.toml
crates/qemb-cli/src/: main.rs
crates/qemb-common/: Cargo.toml
crates/qemb-common/src/: config.rs  error.rs  lib.rs
crates/qemb-convert/: Cargo.toml
crates/qemb-convert/src/: lib.rs  loader.rs  packer.rs  schema.rs  writer.rs
crates/qemb-kernels/: Cargo.toml
crates/qemb-kernels/src/: generators.rs  lib.rs  metrics.rs  primitives.rs  reference.rs  validation.rs
crates/qemb-runtime/: Cargo.toml
crates/qemb-runtime/src/: code_object.rs  device.rs  kfd.rs  lib.rs  target.rs  tensor.rs
crates/qemb-service/: Cargo.toml
crates/qemb-service/src/: api.rs  lib.rs  server.rs
crates/qemb-tokenizer/: Cargo.toml
crates/qemb-tokenizer/src/: bundle.rs  lib.rs  tokenizer.rs
docs/plans/: 2026-03-23-phase1-implementation.md  2026-03-23-phase2-implementation.md  2026-03-23-phase3-implementation.md  2026-03-23-qwen3-embedding-design.md
docs/validation/: primitives.json
