[package]
name = "qemb-convert"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qemb-common.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
safetensors = "0.5"

[dev-dependencies]
tempfile = "3"