[package]
name = "qemb-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qemb-common.workspace = true
qemb-runtime.workspace = true
qemb-tokenizer.workspace = true
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
tower = "0.5"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true